<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E3F2FD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pavan.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/myapps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:textSize="25sp"

        android:text="@string/desctext" />

    <Button
        android:id="@+id/app1"
        android:layout_below="@id/myapps"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_width="200dp"
        android:background="#F08C35"
        android:layout_height="wrap_content"
        android:text="@string/app1"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/app2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app1"
        android:layout_marginLeft="65dp"
        android:text="@string/app2"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        android:background="#F08C35"
        />

    <Button
        android:background="#F08C35"
        android:id="@+id/app3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app2"
        android:layout_marginLeft="65dp"
        android:text="@string/app3"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/app4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app3"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app4"
        android:textAllCaps="true"
        android:background="#F08C35" />

    <Button
        android:id="@+id/app5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app4"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app5"
        android:textAllCaps="true"
        android:background="#F08C35"/>

    <Button
        android:id="@+id/app6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app5"
        android:background="#B71C1C"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app6"
        android:textAllCaps="true"/>




</RelativeLayout>
